test/org/midica/testfiles/failing/eff-unsigned-balance.midica
INCLUDE inc/instruments.midica


0: balance.set(50)
